2006-05-07  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Fix build on GTK+ >= 2.9. (329850)
	
2006-05-04  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c: Fix some cast warnings (340666)
	
2006-05-03  Emmanuel Pacaud

	* rsvg-base.c: Fix rounding error in rsvg_pixbuf_from_file() (340664)
	
2006-05-03  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Require cairo 1.1.2 or better
	* rsvg-convert.c: Remove code made unecessary by cairo 1.1.2
	
2006-05-03  Paolo Borelli  <pborelli@katamail.com>

	* rsvg-filter.c:
	* rsvg-marker.c:
	* rsvg-mask.c:
	* rsvg-paint-server.c:
	* rsvg-private.h:

	Factor out rsvg_get_url_string. Bug 340505.

2006-05-03  Paolo Borelli  <pborelli@katamail.com>

	* rsvg-text.[ch]: pass the lenght to rsvg_make_valid_utf8.
	* rsvg-base.c: avoid some strdups and avoid a leak in the !utf8
	case of rsvg_characters(). Bug 340471.

2006-05-02 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Use g_try_malloc0 so that the app doesn't abort() if we
	can't malloc the requested # of pixels. Part of bug 340440.
	
2006-04-30 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c: Implement the XInclude spec to some large-ish degree. Currently
	doesn't support the "xpointer" bit.
	* rsvg-gobject.c: Only initialize the SAX handler once (on class init)
	rather than at object-init
	
2006-04-29 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-paint-server.c: Fix a "type-punned pointer" issue found by Thomas VS
	* rsvg-base.c: xmlChar vs. char (#340114)
	
2006-04-27 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c: Handle system, public, and unparsed entity declarations
	better. Probably not 100% conformant, but probably better than not
	doing it at all.

	* rsvg-styles.c: Add support for the CSS @import directive. Probably isn't 100%
	conformant, but probably better than not doing it at all.
	
2006-04-27 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c (rsvg_css_parse_xml_attribute_string): Code borrowed from Expat.